Updates done in the encrypt section'

--- a/decode.html
+++ b/decode.html
@@ -67,9 +67,9 @@
     <h1> PROJECT 1</h1>
     <p class="lead">Encryption and Decryption.</p>
     <p class="lead">
-      <button onclick="decrypt()" class="btn btn-lg btn-secondary fw-bold border-white bg-white">DECRYPT</button>
         <input type="text" name="" id="decrypt">
-        <input type="text" name="" id="decrypts" disabled>
+        <input type="text" name="" id="decrypts" placeholder="Results" disabled>
+      <button onclick="decrypt()" class="btn btn-lg btn-secondary fw-bold border-white bg-white">DECRYPT</button>
     </p>
   </main>
 
